--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,38 +12,47 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-    
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
-    
+
       - name: Install NPM packages
         run: npm ci
-    
+
       - name: Build project
         run: npm run build
-    
+
       - name: Run tests
         run: npm test
-    
+
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v4
         with:
           name: production-files
           path: ./build
-  
+
   deploy:
     name: Deploy
     needs: build
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
-    
+
     steps:
       - name: Download artifact
-        uses: actions/download-artifac
+        uses: actions/download-artifact@v4
+        with:
+          name: production-files
+          path: ./build
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build
