update json file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://massagli.github.io/web-portfolio/",
+  "homepage": "https://massagli.github.io/web-portfolio",
   "name": "web-portfolio",
   "version": "0.1.0",
   "private": true,
