--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build & deploy
+name: Build & Deploy React App
 
 on:
   push:
@@ -23,14 +23,14 @@ jobs:
           node-version: 20
           cache: npm
 
-      - name: Install NPM packages
+      - name: Install dependencies
         run: npm ci
 
       - name: Build project
         run: npm run build
 
       - name: Run tests
-        run: npm test
+        run: npm test -- --passWithNoTests
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v4
@@ -39,7 +39,7 @@ jobs:
           path: ./build
 
   deploy:
-    name: Deploy
+    name: Deploy to GitHub Pages
     needs: build
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
@@ -51,7 +51,7 @@ jobs:
           name: production-files
           path: ./build
 
-      - name: Deploy to GitHub Pages
+      - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
